[gd_scene load_steps=19 format=3 uid="uid://5nhvucguf0hj"]

[ext_resource type="Script" path="res://scripts/enemy_controller.gd" id="1_6b4lo"]
[ext_resource type="Script" path="res://scripts/SpriteAnimator.gd" id="2_yl2l7"]
[ext_resource type="Texture2D" uid="uid://vvdq87fgim4y" path="res://assets/character/back_arm.tres" id="3_tkib5"]
[ext_resource type="AnimationLibrary" uid="uid://batughvjkhr3q" path="res://assets/animations/headanimations.res" id="4_dkkh8"]
[ext_resource type="Texture2D" uid="uid://cfevufgcnqg5w" path="res://assets/character/front_arm.tres" id="4_mn5nu"]
[ext_resource type="Texture2D" uid="uid://bkc55gbdyd37x" path="res://assets/character/HumanBackArmCombined.png" id="5_nnccr"]
[ext_resource type="AnimationLibrary" uid="uid://dtmbvectv4vvc" path="res://assets/animations/backarmanimations.res" id="6_yi74n"]
[ext_resource type="Texture2D" uid="uid://bxr0yywl3f2rk" path="res://assets/character/HumanLegsCombined.png" id="7_ncmpg"]
[ext_resource type="AnimationLibrary" uid="uid://cradvce2uqbvu" path="res://assets/animations/legsanimations.res" id="8_b4k4a"]
[ext_resource type="AnimationLibrary" uid="uid://b4sgs0eo17ef6" path="res://assets/animations/bodyanimations.res" id="10_wxjge"]
[ext_resource type="Texture2D" uid="uid://bv31mhy8ox3np" path="res://assets/character/HumanFrontArmCombined.png" id="11_o2uf6"]
[ext_resource type="AnimationLibrary" uid="uid://cirf7nrrbunrx" path="res://assets/animations/frontarmanimations.res" id="12_suj35"]
[ext_resource type="Texture2D" uid="uid://bg8h1wnl1fjyh" path="res://assets/character/AngleReference.png" id="13_uxyny"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dvqyy"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_owahm"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_61heo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_srujs"]
height = 52.4896

[sub_resource type="CircleShape2D" id="CircleShape2D_xv7mo"]

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 23
script = ExtResource("1_6b4lo")
SPEED = 40

[node name="ground_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_dvqyy")

[node name="BaseSprite" type="Sprite2D" parent="."]
z_as_relative = false
texture_filter = 1
texture_repeat = 1
hframes = 6
vframes = 6
frame = 32
script = ExtResource("2_yl2l7")

[node name="held_item" type="Sprite2D" parent="BaseSprite"]
z_index = 1
texture_filter = 1
offset = Vector2(3.8147e-06, -1.52588e-05)

[node name="BackArmHold" type="Sprite2D" parent="BaseSprite"]
visible = false
z_index = 1
position = Vector2(4, -5)
texture = ExtResource("3_tkib5")
offset = Vector2(0, 5)

[node name="FrontArmHold" type="Sprite2D" parent="BaseSprite"]
visible = false
z_index = 1
position = Vector2(-4, -5)
texture = ExtResource("4_mn5nu")
offset = Vector2(0, 5)

[node name="Head" type="Sprite2D" parent="BaseSprite"]
texture = SubResource("CompressedTexture2D_owahm")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 42

[node name="HeadAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/Head"]
libraries = {
"headanimations": ExtResource("4_dkkh8")
}

[node name="BackArm" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("5_nnccr")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 54

[node name="BackArmAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/BackArm"]
libraries = {
"backarmanimations": ExtResource("6_yi74n")
}

[node name="Legs" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("7_ncmpg")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 23

[node name="LegsAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/Legs"]
libraries = {
"legsanimations": ExtResource("8_b4k4a")
}

[node name="Body" type="Sprite2D" parent="BaseSprite"]
texture = SubResource("CompressedTexture2D_61heo")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 47

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/Body"]
libraries = {
"bodyanimations": ExtResource("10_wxjge")
}

[node name="FrontArm" type="Sprite2D" parent="BaseSprite"]
texture = ExtResource("11_o2uf6")
offset = Vector2(0, 1)
hframes = 6
vframes = 10
frame = 23

[node name="FrontArmAnimationPlayer" type="AnimationPlayer" parent="BaseSprite/FrontArm"]
libraries = {
"frontarmanimations": ExtResource("12_suj35")
}

[node name="reference" type="Sprite2D" parent="BaseSprite"]
visible = false
texture_filter = 2
texture = ExtResource("13_uxyny")

[node name="hit_box" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(0.65041, 0.57154)
shape = SubResource("CapsuleShape2D_srujs")

[node name="detection_zone" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_zone"]
position = Vector2(0, 9)
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_xv7mo")

[connection signal="body_entered" from="detection_zone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="detection_zone" to="." method="_on_detection_zone_body_exited"]
